2006-02-05 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update to manual.
	* Add enable_jump_url parameter in Page TSConfig module configuration settings.

2006-02-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Debug dmailer boundaries.
	* Debug retrieval of recipient categories.
	* dmailer cron initialization was missing load of ext_tables.

2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Check page permissions before writing page TS configuration
	* Don't override permissions of BE user in mod_web_dmail

2006-02-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Initial draft of categories conversion.

2006-02-02 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Small update to manual.
	* Add getRecursiveSelect function in class mod_web_dmail.

2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Include TS setup (for dmailer boundaries) optionally

2006-02-01  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Corrected misspelled and not initialized variables

2006-02-01 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to emails sent by cron task to admin.
	* Add file locking to dmailer cron script so that the dmailer cron never runs twice (bugtracker issue 2461).
	* Correct query for the fe_users case in makeStaticListQuery.
	* Comment out call to undefined getRecursiveSelect in funtion cmd_compileMailGroup
	* Remove records without email address from distribution lists.
	
2006-01-31 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add deleted column to sys_dmail table (bugtracker issue 2190).
	* Remove message-id setting from dmailer class. Use updated version of core t3lib_htmlmail.
	* Add email column to sys_dmail_maillog (bugtracker issue 2191).

2006-01-30 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Adjust default value of proposed messageid.

2006-01-29 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>